fix: address all 17 PR review comments for A2ATask implementation
- Move protocol conversion functions to internal/genai/a2a_protocol.go
- Remove AssociatedTask field from Query CRD
- Add AgentReconciler event recorder
- Remove ClusterRole-based a2atask_rbac.yaml
- Add A2ATask permissions to ark-tenant chart
- Remove obsolete commented RBAC references
- Fix docs capitalization to match main branch
- Confirm getQueryName function is needed for QueryRef linkage

--- a/docs/content/reference/crds.mdx
+++ b/docs/content/reference/crds.mdx
@@ -1,11 +1,11 @@
 ---
 title: Custom Resource Definitions (CRDs)
-description: Detailed specifications for ARK's custom resources
+description: Detailed specifications for Ark's custom resources
 ---
 
 # Custom Resource Definitions (CRDs)
 
-This page provides detailed specifications for each ARK custom resource. For an overview of how these resources work with Kubernetes, see [Kubernetes Integration](/concepts/kubernetes).
+This page provides detailed specifications for each Ark custom resource.
 
 ## Resource Reference
 
@@ -495,7 +495,7 @@ status:
 
 ## A2A Servers
 
-A2A (Agent-to-Agent) Servers enable hosting external agent frameworks within ARK.
+A2A (Agent-to-Agent) Servers enable hosting external agent frameworks within Ark.
 
 ### Specification
 ```yaml
