--- a/docs/content/developer-guide/ark-gateway.mdx
+++ b/docs/content/developer-guide/ark-gateway.mdx
@@ -144,8 +144,7 @@ For local development, the localhost gateway provides easy access to services:
 Common service URLs when using localhost gateway:
 
 - **Dashboard**: `http://dashboard.127.0.0.1.nip.io:8080`
-- **ARK API**: `http://ark-api.127.0.0.1.nip.io:8080`
-- **A2A Gateway**: `http://ark-api-a2a.127.0.0.1.nip.io:8080`
+- **ARK API**: `http://ark-api.127.0.0.1.nip.io:8080` (includes A2A Gateway endpoints)
 
 ## Troubleshooting
 
