--- a/docs/content/developer-guide/langchain-execution-engine.mdx
+++ b/docs/content/developer-guide/langchain-execution-engine.mdx
@@ -75,4 +75,4 @@ spec:
 ## Next Steps
 
 - [ARK Cluster Memory](/developer-guide/services/ark-cluster-memory) - Memory storage with streaming
-- [A2A Gateway](/developer-guide/services/ark-a2a-api) - Agent-to-agent communication
+- [ARK API](/developer-guide/services/ark-api) - REST API including A2A Gateway for agent-to-agent communication
