--- a/docs/content/index.mdx
+++ b/docs/content/index.mdx
@@ -58,8 +58,7 @@ Build, deploy and operate agentic solutions using proven patterns and practices 
 
 ## Services
 
-- **ark-api**: REST API for managing ARK resources
-- **ark-api-a2a**: Agent-to-agent communication gateway
+- **ark-api**: REST API for managing ARK resources (includes A2A Gateway for agent-to-agent communication)
 - **ark-dashboard**: Web-based management interface
 - **ark-mcp**: MCP server integration service
 - **ark-evaluator**: Holistic evaluation and scoring service
