--- a/docs/content/developer-guide/services.mdx
+++ b/docs/content/developer-guide/services.mdx
@@ -47,9 +47,17 @@ Individual services can also be exposed using `kubectl port-forward` (as shown i
 
 ### Core Services
 
-- [A2A Gateway](/developer-guide/services/ark-a2a-api) - Agent-to-Agent Gateway implementing A2A protocol
 - [ARK Cluster Memory](/developer-guide/services/ark-cluster-memory) - In-memory storage with SSE streaming support
 - [Execution Engine](/developer-guide/langchain-execution-engine) - Framework adapter for Langchain and other AI frameworks
+
+### ARK API Services
+
+**ARK API** includes the A2A Gateway functionality for agent-to-agent communication. The A2A protocol endpoints are available as part of the main ARK API service:
+- **`GET /agents`** - List all available Ark agents
+- **`GET /agent/{agent-name}/.well-known/agent.json`** - Get agent card
+- Dynamic agent routes at `/agent/{name}/*` for A2A protocol communication
+
+See [ARK API](/developer-guide/services/ark-api) for more information.
 
 ### Execution Engines
 - **Langchain Execution Engine** - Framework adapter for Langchain workflows
