refactor: remove marketplace documentation and related services; update project structure

--- a/docs/content/developer-guide/observability/langfuse-service.mdx
+++ b/docs/content/developer-guide/observability/langfuse-service.mdx
@@ -5,7 +5,7 @@ description: Monitor and trace AI agent interactions with Langfuse integration
 
 # Langfuse Service
 
-> **📍 This page has moved**: Langfuse is now part of the ARK Marketplace. See the [Marketplace documentation](/marketplace/services/langfuse) for installation and setup instructions.
+> **📍 This page has moved**: Langfuse is now part of the [ARK Marketplace](https://github.com/mckinsey/agents-at-scale-marketplace). See the [Langfuse documentation](https://mckinsey.github.io/agents-at-scale-marketplace/services/langfuse/) for installation and setup instructions.
 
 ---
 
