--- a/docs/content/developer-guide/observability/phoenix-service.mdx
+++ b/docs/content/developer-guide/observability/phoenix-service.mdx
@@ -5,7 +5,7 @@ description: AI/ML observability and evaluation platform for monitoring agent pe
 
 # Phoenix Service
 
-> **📍 This page has moved**: Phoenix is now part of the ARK Marketplace. See the [Marketplace documentation](/marketplace/services/phoenix) for installation and setup instructions.
+> **📍 This page has moved**: Phoenix is now part of the [ARK Marketplace](https://github.com/mckinsey/agents-at-scale-marketplace). See the [Phoenix documentation](https://mckinsey.github.io/agents-at-scale-marketplace/services/phoenix/) for installation and setup instructions.
 
 ---
 
