fix: docs references

--- a/docs/content/reference/crds.mdx
+++ b/docs/content/reference/crds.mdx
@@ -538,4 +538,4 @@ ARK resources work together in common patterns:
 
 ---
 
-**Next**: Learn about [CLI Tools](/concepts/cli-tools) for working with these resources.
+**Next**: Learn about [CLI Tools](/developer-guide/cli-tools) for working with these resources.
