--- a/docs/content/developer-guide/testing.mdx
+++ b/docs/content/developer-guide/testing.mdx
@@ -9,8 +9,6 @@ Ark uses [Chainsaw](https://github.com/kyverno/chainsaw) to declaratively create
 
 ## Setup
 
-### Install Chainsaw CLI
-
 Install chainsaw for running tests locally:
 
 ```bash
@@ -23,8 +21,6 @@ brew install kyverno/chainsaw/chainsaw
 ```
 
 ## Running Tests Locally
-
-### Simulate GitHub E2E Environment
 
 To replicate the GitHub workflow environment locally:
 
@@ -43,7 +39,16 @@ export E2E_TEST_AZURE_OPENAI_BASE_URL=yoururl
 chainsaw test --config .chainsaw.yaml --selector '!evaluated' .
 ```
 
-## Next Steps
+## Troubleshooting Tests
 
-- [Services](/developer-guide/services) - Learn about ARK services
-- [Observability](/developer-guide/observability) - Monitor your ARK applications
+The following flags are extremely useful for troubleshooting test issues:
+
+- `--pause-on-failure`: stop the test execution on the first failure - don't delete resources
+- `--fail-fast`: abort immediately on first failure
+- `--skip-delete`: don't delete the test resources or namespace at the end of the run (makes it easier to inspect resources)
+
+As an example, to run the full suite and pause as soon as there is any failure and allow the operator to inspect resources:
+
+```bash
+chainsaw test --config .chainsaw.yaml --selector '!evaluated' --pause-on-failure .
+```
