feat: Use Anthropic Marketplace JSON in Marketplace Repo #438 (#454) (#463)
This restores the changes from #445.

- Added Anthropic Marketplace JSON type definitions
- Implemented marketplace manifest fetche
- Updated marketplace services to fetch from JSON
- Updated install/uninstall commands to use async marketplace service
lookup
- Added comprehensive test coverage for all new functionality

## Checklist

- [x] Follow the [contributor guide](./CONTRIBUTING.md)
- [x] End-to-end tests pass
- [x] Unit tests for essential parts of your code, e.g. APIs exposed via
SDKs or endpoints
- [x] Update `./docs`
- [x] Recognize contributors with "@all-contributors please add <person>
for <code, bug, docs, etc>"
- [x] Linked issues #438

---------

Co-authored-by: Iliass <iliassjabali@gmail.com>
Co-authored-by: Kristof Havasi <102520175+havasik@users.noreply.github.com>
Co-authored-by: Kristof Havasi <chris.hvse@gmail.com>

--- a/docs/content/user-guide/ark-cli.mdx
+++ b/docs/content/user-guide/ark-cli.mdx
@@ -47,6 +47,27 @@ Then query any agent:
 
 That's it! The CLI maintains conversation context and lets you interact with any deployed ARK agents.
 
+## Marketplace
+
+The ARK CLI supports dynamic marketplace service enumeration from a `marketplace.json` file hosted in the marketplace repository.
+
+```bash
+# List available marketplace services and agents
+ark marketplace list
+
+# Install a marketplace service
+ark install marketplace/services/<service-name>
+
+# Install a marketplace agent
+ark install marketplace/agents/<agent-name>
+
+# Uninstall a marketplace service or agent
+ark uninstall marketplace/services/<service-name>
+ark uninstall marketplace/agents/<agent-name>
+```
+
+The marketplace fetches services and agents from `https://github.com/mckinsey/agents-at-scale-marketplace/raw/main/marketplace.json` using the Anthropic Marketplace JSON format. If the fetch fails, an unavailable message is displayed.
+
 ## Local Development
 
 ```bash
