refactor: remove multi-target query functionality

--- a/docs/content/developer-guide/building-a2a-servers.mdx
+++ b/docs/content/developer-guide/building-a2a-servers.mdx
@@ -218,7 +218,7 @@ spec:
   input:
   - content: "Complex analysis task"
     role: user
-  targets:
+  target:
   - type: agent
     name: my-agent
   timeout: "30m"  # 30 minutes for this specific query
