--- a/docs/content/developer-guide/langchain-execution-engine.mdx
+++ b/docs/content/developer-guide/langchain-execution-engine.mdx
@@ -64,7 +64,7 @@ metadata:
   name: my-query
 spec:
   input: "Remember that my name is Alice"
-  targets:
+  target:
   - type: agent
     name: my-agent
   memory:
