--- a/docs/content/developer-guide/queries/mcp-configuration.mdx
+++ b/docs/content/developer-guide/queries/mcp-configuration.mdx
@@ -15,6 +15,6 @@ metadata:
       {"ark-system/filesystem": {"toolCalls": [{"name": "set_base_directory", "arguments": {"path": "./shared"}}]}}
 spec:
   input: "Hello"
-  targets:
+  target:
     - name: my-agent
 ```
