--- a/docs/content/developer-guide/queries/streaming.mdx
+++ b/docs/content/developer-guide/queries/streaming.mdx
@@ -22,7 +22,7 @@ spec:
   input: "Hello"
   # Point to a memory resource that implemnts the event stream API.
   memory: "streaming-memory"
-  targets:
+  target:
     - name: my-agent
 ```
 
