--- a/docs/content/reference/query-execution.mdx
+++ b/docs/content/reference/query-execution.mdx
@@ -42,9 +42,9 @@ metadata:
   name: my-query
 spec:
   input: "What is the weather today?"
-  targets:
-    - type: agent
-      name: weather-agent
+  target:
+    type: agent
+    name: weather-agent
   parameters:
     - name: agent_name
       value: "WeatherBot"
