--- a/docs/content/reference/resources/memory.mdx
+++ b/docs/content/reference/resources/memory.mdx
@@ -38,7 +38,7 @@ metadata:
   name: chat-with-memory
 spec:
   input: "What did we discuss earlier?"
-  targets:
+  target:
     - name: my-agent
   memory:
     name: ark-broker
