--- a/docs/content/user-guide/samples/mcp-servers.mdx
+++ b/docs/content/user-guide/samples/mcp-servers.mdx
@@ -532,7 +532,7 @@ metadata:
       }
 spec:
   input: Create a file called data.txt with content 'Project A data'
-  targets:
+  target:
   - type: agent
     name: filesystem
 ```
