feat: standardise broker interfaces, SSE, file storage, pagination and cursors (#645)
## Summary

Mainly standardising types, persistence, deduplicating and QOL for the
dashboard page. In the video 'purge' doesn't work for all routes - I
fixed in the PR just now.


https://github.com/user-attachments/assets/81ea9d02-0f4e-4214-9a13-a41777de6b52

### Broker Type Standardisation

Essentially made all of the broker topics use the same types. The key
interfaces are:

- BrokerItem<T> - Wraps the underlying data object (such as a completion
chunk) with sequenceNumber and timestamp. This is what the other types
then use.
- BrokerItemStream<T> - Append-only stream with sequencing, persistence,
and event subscriptions. Means each broker is essentially dervied from
this.

Then there are the actual brokers. It might be better to name them
'topics' or something:

- TraceBroker - Groups OTEL spans by traceId, supports per-trace
subscriptions
  - MemoryBroker - Stores messages grouped by conversationId/queryId
  - EventBroker - Stores operation events grouped by queryId
  - CompletionChunkBroker - Stores LLM streaming chunks by queryId

For file storage:
- JsonFileStore<T> - File-based persistence with configurable max items.
This means all file io is deduplicated

For pagination and cursors:
  - PaginationParams - Request params (limit, cursor)
  - PaginatedList<T> - Response with items, total, hasMore, nextCursor
  - DEFAULT_LIMIT (100), MAX_LIMIT (1000)

The other bits

### Broker API Pagination
- Implement cursor-based pagination for all broker endpoints (traces,
messages, chunks, events)
- Add `limit` and `cursor` query parameters to ark-api broker routes
- Add pagination support to ark-broker's `BrokerItemStream` class
- Return paginated responses with `items`, `total`, `hasMore`, and
`nextCursor`

### Dashboard Broker Page Improvements  
- Fix `cursor=null` causing 422 errors by properly checking
undefined/null
- Fix navigation getting stuck by tracking component mount stat

--- a/docs/content/developer-guide/ark-sdk.mdx
+++ b/docs/content/developer-guide/ark-sdk.mdx
@@ -53,16 +53,15 @@ make ark-sdk-build
 # After this, the ark-api can be built:
 make ark-api-build
 
-# This genreated the services/ark-api/openapi.json, based on the FastAPI models.
+# This generates the services/ark-api/openapi.json, based on the FastAPI models.
 
 # Finally, the ark dashboard can have its Typescript types automatically updated
-# based on the new ark-api routes and models:
+# based on the new ark-api routes and models. Run from ark-dashboard/ark-dashboard:
 cp ../../ark-api/openapi.json ../out/
 npm run generate:api
 
-# This generate:
-# lib/api/generated/types.ts
-
+# This generates: lib/api/generated/types.ts
+```
 
 ## Local Development Workflow
 
